# frontier_description

./: CMakeLists.txt  README.md  package.xml
config/: display_urdf.rviz
launch/: load.launch  view_urdf.launch
urdf/: frontier.urdf.xacro  frontier_standalone.urdf.xacro  microstrain.urdf.xacro  ouster.gazebo  ouster.urdf.xacro  rooster.urdf.xacro  rooster_standalone.urdf.xacro
urdf/gazebo/: ground_truth.gazebo  ouster.gazebo  realsense_d435.gazebo
urdf/meshes/: 3dm_gx4_25.dae  3dm_gx4_45.dae  alphasense_simplified_4cams.dae  frontier_40deg_shim.dae  frontier_mount_v1.dae  frontier_mount_v3.dae  frontier_mount_v6.dae  frontier_mount_v6_realsense.dae  os1_mesh.dae  rooster_mount_v1.dae  rooster_mount_v3.dae
